--- a/frontend/styles/structure.css
+++ b/frontend/styles/structure.css
@@ -5,6 +5,7 @@
 	position: relative;
 	width: 100%;
 	height: auto;
+	min-height: calc(100vh + 10rem);
 }
 
 .row {
@@ -79,7 +80,6 @@
 	display: grid;
 	width: 100%;
 	height: 100%;
-	/* background:blue; */
 
 	grid-template-columns:11rem 1fr;
 	grid-template-rows:10rem 1fr 10rem;
