--- a/frontend/styles/typography.css
+++ b/frontend/styles/typography.css
@@ -151,7 +151,7 @@
 
 .paragraph, p {
 	font-family: 'MDSystem', -apple-system, Helvetica, Arial, sans-serif;
-	font-weight: 400;
+	font-weight: 600;
 	font-size: 1.5rem;
 	line-height: 2rem;
 	letter-spacing:-0.012rem;
@@ -172,7 +172,7 @@
 	margin-bottom: 1em;
 }
 
-.logo-font { /* Used for the logo in the header. */
+.logo-font, p.logo-font { /* Used for the logo in the header. */
 	font-family: 'MDNichrome', -apple-system, Helvetica, Arial, sans-serif;
 	font-weight: 700;
 	font-size: 1.875rem;
@@ -285,4 +285,16 @@
 	.content figure {}
 	.content figure img {}
 	.content figure figcaption {}
+}
+
+.button-link {
+	background:black;
+	padding: 0.10rem 0.35rem;
+	text-decoration: none;
+}
+.button-link:hover {
+	color:black;
+	background:var(--action-color);
+	padding: 0.10rem 0.35rem;
+	text-decoration: none;
 }
